fixed dragging paper on mobile not working

--- a/css/style.css
+++ b/css/style.css
@@ -125,3 +125,7 @@ p.animate-type {
         opacity: 0;
     }
 }
+
+body {
+    touch-action: none;
+}
